fix: fix blank space in every page in left side of screen triggered by scrollbar-gutter, changed variable value

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -94,7 +94,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;
 }
 /* HTML5 display-role reset for older browsers */
 article,
